--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
                         </div>
                     </div>
                     <ul class="breadcrumb" id="ul">
-                        <li>Version: 2.1.30</li>
+                        <li>Version: 2.1.32</li>
                         <li>Size: 14.7 MB</li>
                     </ul>
                     <div style="padding-top:20px;">
@@ -61,7 +61,7 @@
             <div class="col-md-8 col-md-offset-2">
                 <div class="text-center">
                     <p> <a href="https://v2ss.github.io/Shadowsocks/" target="blank">Designed to protect your Internet traffic.</a> </p>
-                    <p> <a href="https://https://v2ss.github.io/" target="blank">一鍵接入，鏈接全球！</a> </p>
+                    <p> <a href="https://v2ss.github.io/" target="blank">一鍵接入，鏈接全球！</a> </p>
                     </p>
                 </div>
             </div>
