--- a/index.html
+++ b/index.html
@@ -6,8 +6,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0, user-scalable=no">
     <meta name="description" content="Shadowrocket（小火箭）在线安装" />
     <meta name="keywords" content="Shadowrocket" />
-    <title>Shadowrocket（小火箭）在线安装 - Shadowsocks-Help</title>
-    <link rel="shortcut icon" href="https://v2ss.github.io/shadowsocks/assets/images/logo.png">
+    <title>Shadowrocket（小火箭）在线安装 - shadowrocket-Help</title>
+    <link rel="shortcut icon" href="https://v2ss.github.io/shadowrocket/assets/images/logo.png">
     <link rel="stylesheet" href="assets/css/bootstrap.min.css" />
     <link rel="stylesheet" href="assets/css/style.css" />
     <link rel="stylesheet" href="assets/css/my.css" />
@@ -25,7 +25,7 @@
                 <div style="text-align:center;">
                     <div class="polaroid">
                         <div class="logo">
-                            <img src="https://v2ss.github.io/shadowsocks/assets/images/icon.jpg" class="img-circle" width="120" height="120" />
+                            <img src="https://v2ss.github.io/shadowrocket/assets/images/icon.jpg" class="img-circle" width="120" height="120" />
                         </div>
                     </div>
                     <ul class="breadcrumb" id="ul">
@@ -45,7 +45,7 @@
                             </div>
                         </div>
                         <span id="checkinfo">
-                            <a href="itms-services://?action=download-manifest&url=https://v2ss.github.io/shadowsocks/ipa.plist" class="btn btn-success btn-lg btn-circle" id="uaApp">在线安装</a>
+                            <a href="itms-services://?action=download-manifest&url=https://v2ss.github.io/shadowrocket/ipa.plist" class="btn btn-success btn-lg btn-circle" id="uaApp">在线安装</a>
                             <div class="uatip" id="uaTip">
                                 <span class="uatip-icon"></span>
                                 <p class="uatip-txt">点击右上角<br />选择在Safari中打开</p>
@@ -60,7 +60,7 @@
             </div>
             <div class="col-md-8 col-md-offset-2">
                 <div class="text-center">
-                    <p> <a href="https://v2ss.github.io/Shadowsocks/" target="blank">Designed to protect your Internet traffic.</a> </p>
+                    <p> <a href="https://v2ss.github.io/shadowrocket/" target="blank">Designed to protect your Internet traffic.</a> </p>
                     <p> <a href="https://v2ss.github.io/" target="blank">一鍵接入，鏈接全球！</a> </p>
                     </p>
                 </div>
@@ -69,8 +69,8 @@
     </div>
     <div class="footer">
         <div class="text-center">
-            ©&nbsp;2015-2019 <a href="https://v2ss.github.io/shadowsocks/" target="blank">Shadowrocket</a>
-            <a href="https://v2ss.github.io/Shadowsocks/" target="blank">Help</a>
+            ©&nbsp;2015-2019 <a href="https://v2ss.github.io/shadowrocket/" target="blank">Shadowrocket</a>
+            <a href="https://v2ss.github.io/shadowrocket/" target="blank">Help</a>
         </div>
     </div>
     <script type="text/javascript" src="assets/js/jquery-1.7.2.min.js"></script>
