--- a/index.html
+++ b/index.html
@@ -60,8 +60,8 @@
             </div>
             <div class="col-md-8 col-md-offset-2">
                 <div class="text-center">
-                    <p> <a href="https://v2ss.github.io/shadowrocket/" target="blank">Designed to protect your Internet traffic.</a> </p>
-                    <p> <a href="https://v2ss.github.io/" target="blank">一鍵接入，鏈接全球！</a> </p>
+                    <p> <a href="https://sstz.me/" target="blank">Designed to protect your Internet traffic.</a> </p>
+                    <p> <a href="https://sstz.me/" target="blank">一鍵接入，鏈接全球！</a> </p>
                     </p>
                 </div>
             </div>
