--- a/index.html
+++ b/index.html
@@ -69,8 +69,7 @@
     </div>
     <div class="footer">
         <div class="text-center">
-            ©&nbsp;2015-2019 <a href="https://v2ss.github.io/shadowrocket/" target="blank">Shadowrocket</a>
-            <a href="https://v2ss.github.io/shadowrocket/" target="blank">Help</a>
+            ©&nbsp;2015-2019 <a href="https://sstz.me/" target="blank">掠影网络</a>
         </div>
     </div>
     <script type="text/javascript" src="assets/js/jquery-1.7.2.min.js"></script>
